# sig-raytracer

./: .gitignore  Cargo.toml  README.md
data/: test_scene_sig.json
src/: camera.rs  config.rs  cube.rs  lib.rs  main.rs  materials.rs  point3d.rs  ray.rs  raytracer.rs  signal_map.rs  sphere.rs
